--- a/product-vault-spring/sa.yaml
+++ b/product-vault-spring/sa.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: product-vault-spring
+  name: product-vault-spring-config
   labels:
-    app: product-vault-spring
+    app: product-vault-spring-config
