--- a/product-vault-sidecar/deployment.yaml
+++ b/product-vault-sidecar/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-product-vault-sidecar: "secret/product-vault-sidecar"
-        vault.hashicorp.com/role: "microservices"
+        vault.hashicorp.com/role: "product-vault-sidecar"
         vault.hashicorp.com/update: "true"
         vault.hashicorp.com/agent-inject-template-product-vault-sidecar: |
           {{ with secret "secret/product-vault-sidecar" }}
